# powercap

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  RELEASES.md  aarch64.cmake  pkgconfig.in
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libpowercap-dev.install  libpowercap0.symbols  not-installed  rules  watch
debian/patches/: multiarch.patch  series  symvisibility.patch
debian/upstream/: metadata
inc/: powercap-rapl-sysfs.h  powercap-rapl.h  powercap-sysfs.h  powercap.h
src/: powercap-common.c  powercap-common.h  powercap-rapl-sysfs.c  powercap-rapl.c  powercap-sysfs.c  powercap.c
test/: CMakeLists.txt  powercap-common-test.c  powercap-rapl-test.c  powercap-sysfs-test.c  powercap-test.c
utils/: CMakeLists.txt  powercap-info.c  powercap-set.c  rapl-info.c  rapl-set.c  util-common.c  util-common.h
utils/man/man1/: powercap-info.1  powercap-info.1.in  powercap-set.1  powercap-set.1.in  rapl-info.1  rapl-set.1
